--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -10,6 +10,12 @@
   padding: 1rem;
   width: 100%;
   font-size: 1.2rem;
+  position: relative;
+}
+.input-search::placeholder {
+  position: absolute;
+  -webkit-transform: translate3d(0, 0, 0);
+  z-index: 9999;
 }
 
 .search-icon-input {
